--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -115,6 +115,11 @@
                         .name-text, .blessure-text, .heroism-text, .health-text{
                             margin: 0.3em .3em 0 .3em;
                         }
+                        .activity-text{
+                            font-weight: normal;
+                            font-size: small;
+                            white-space: normal;
+                        }
                         .health-block{
                             display: flex;
                             flex-direction: row;
