--- a/templates/actor/tab/notes.html
+++ b/templates/actor/tab/notes.html
@@ -1,3 +1,3 @@
 <div class="notes-tab">
-    {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+    {{editor content=data.notebook target="data.notebook" button=true owner=owner editable=editable}}
 </div>
