--- a/templates/item/skill.html
+++ b/templates/item/skill.html
@@ -4,7 +4,7 @@
     </header>
     <div class="sheet-content">
         <div class="input-skillvalue">
-            <input title="{{localize "cleenmain.label.value"}}" id="skill" name="data.value" type="number" value="{{data.value}}"/>
+            <input title="{{localize 'cleenmain.label.value'}}" id="skill" name="data.value" type="number" value="{{data.value}}"/>
         </div>
         <div class="skill-name-line">
             <input class="checkbox" name="data.developed" type="checkbox" {{checked data.developed}}>
